<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaLogoFormulariosInicio"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/empresa"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/roboto"
        android:text="@string/eslogan"
        android:textAlignment="center"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaInputs"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Correo"
        android:inputType="text"
        android:maxLength="255"
        android:textColor="@color/black"
        android:drawableStart="@drawable/correo"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaInputs"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/phPassw"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textColor="@color/black"
        android:drawableStart="@drawable/contra"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hint"
        android:textColor="@color/colorLink"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=""
        android:textColor="@color/colorDelete"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnLogin"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnRegistrarse"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />


</LinearLayout>